@@ -31,14 +31,15 @@ SUBDIRS = \
 DPKG_FILES = \
 	dpkg/changelog \
 	dpkg/changelog.in \
-       	dpkg/compat \
-       	dpkg/control \
-       	dpkg/copyright \
-       	dpkg/copyright.in \
-       	dpkg/rules \
-       	dpkg/libsmraw-dev.docs \
-       	dpkg/libsmraw.docs \
-       	dpkg/libsmraw-tools.docs
+	dpkg/compat \
+	dpkg/control \
+	dpkg/copyright \
+	dpkg/copyright.in \
+	dpkg/rules \
+	dpkg/libsmraw-dev.docs \
+	dpkg/libsmraw.docs \
+	dpkg/libsmraw-tools.docs \
+	dpkg/source/format
 
 GETTEXT_FILES = \
 	config.rpath \
