@@ -37,6 +37,11 @@ Tests:
 * add tests for Python-bindings
 * information file
 
+20141229
+* updated dpkg files
+* updated dependencies
+* updated .gitignore
+
 20141226
 * changes for updated dependencies
 
